# fbi-ucr-predictive-service

./: .env.example  .gitignore  .gitleaks.toml  AI-DISCLOSURE.md  CONTRIBUTING.md  Containerfile  PLAN.md  README.md  architecture-diagram.md  deploy.sh  pyproject.toml
.github/: CODEOWNERS
docs/: ML_PRIMER.md  MODEL_SELECTION.md
docs/proposals/: fbi-ucr-deployment.md
manifests/base/: deployment.yaml  kustomization.yaml  (+3 more)
models/: burglary.joblib  burglary_CA.joblib  burglary_CA_meta.json  burglary_FL.joblib  burglary_FL_meta.json  burglary_IL.joblib  burglary_IL_meta.json  burglary_NY.joblib  burglary_NY_meta.json  burglary_TX.joblib  burglary_TX_meta.json  burglary_meta.json  homicide.joblib  homicide_CA.joblib  homicide_CA_meta.json  homicide_FL.joblib  homicide_FL_meta.json  homicide_IL.joblib  homicide_IL_meta.json  homicide_NY.joblib  homicide_NY_meta.json  homicide_TX.joblib  homicide_TX_meta.json  homicide_meta.json  motor-vehicle-theft.joblib  motor-vehicle-theft_CA.joblib  motor-vehicle-theft_CA_meta.json  motor-vehicle-theft_FL.joblib  motor-vehicle-theft_FL_meta.json  motor-vehicle-theft_IL.joblib  motor-vehicle-theft_IL_meta.json  motor-vehicle-theft_NY.joblib  motor-vehicle-theft_NY_meta.json  motor-vehicle-theft_TX.joblib  motor-vehicle-theft_TX_meta.json  motor-vehicle-theft_meta.json  property-crime.joblib  property-crime_CA.joblib  property-crime_CA_meta.json  property-crime_FL.joblib  (+20 more)
outputs/: optimized_rodeo_results.csv  rodeo_results.csv
scripts/: export_models.py  fetch_fbi_data.py  run_model_rodeo.py  run_optimized_rodeo.py  train_models.py
(+15 files in other folders)
