[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fbi-ucr"
version = "0.1.0"
description = "FBI UCR Crime Statistics Prediction Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "joblib>=1.3.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
fbi-ucr = "fbi_ucr.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fbi_ucr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
